--- a/htmlCss/main.css
+++ b/htmlCss/main.css
@@ -4,11 +4,9 @@ height: 800px;
 
 }
 
-.header{
+.profile-content{
+margin-top: 30px;
 
-    width: 100%;
-    height: 10%;
-    background: skyblue;
 }
 
 .left-menu{
@@ -22,4 +20,12 @@ height: 800px;
     width: 70%;
     height: 70%;
     background: coral;
+}
+
+.profile-image{
+    width: 75px;
+    height: 75px;
+  position: relative;
+  bottom: 20px;
+    float: left;
 }
